# TrayBot

./: .gitignore  README.md  exchange.xml
agent/: pytest.ini  requirements.txt  run_tests.sh
agent/app/: __init__.py  main.py  map_state.py  mqtt_reporter.py  reporter.py  runner.py
agent/app/workflow/: graph.py  nodes.py  state.py
agent/tests/: test_graph.py
backend/: pytest.ini  requirements.txt  run_server.sh  run_tests.sh
backend/app/: __init__.py  hub.py  mqtt_bridge.py  server.py  state.py  work_orders.py
backend/tests/: conftest.py  test_api.py  test_work_orders.py
doc/: 3part_conn.md  for_java_backent.md  mqtt.md  thinking_delta_impl.md
front/: .env.development  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
front/src/: App.tsx  index.css
front/src/components/: CameraGrid.tsx  EventSnapshot.tsx  FloorMap.tsx  Header.tsx  LiveFeed.tsx  ResizableVerticalSplit.tsx  RobotStatusPanel.tsx  WorkOrderPool.tsx
front/src/hooks/: useDashboard.ts  useDashboardSocket.ts
front/src/mock/: data.ts  useMockDashboard.ts  workOrders.ts  workflow.ts
front/src/types/: index.ts
shared/: pyproject.toml
shared/traybot_protocol/: __init__.py  messages.py  models.py  mqtt_topics.py
