[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traybot-protocol"
version = "0.1.0"
description = "TrayBot agent ↔ cloud ↔ frontend shared protocol"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["traybot_protocol*"]
